# AUV-PROJECT

./: .gitignore  README.md  deniz_tabani.blend  gorev1parkur.blend  gorev2parkur.blend  gorev2parkur.blend1  sim_manual.txt
catkin_ws/devel/: .catkin
catkin_ws/devel/include/stonefish_ros/: BeaconInfo.h  DVL.h  DVLBeam.h  Event.h  EventArray.h  INS.h  Int32Stamped.h  NEDPose.h  Respawn.h  RespawnRequest.h  RespawnResponse.h  SonarSettings.h  SonarSettings2.h  SonarSettings2Request.h  SonarSettings2Response.h  SonarSettingsRequest.h  SonarSettingsResponse.h  ThrusterState.h
catkin_ws/devel/lib/girona_pilot/: pilot_complete
catkin_ws/devel/lib/pkgconfig/: girona_pilot.pc  stonefish_ros.pc
catkin_ws/devel/lib/python3/dist-packages/stonefish_ros/msg/: _BeaconInfo.py  _DVL.py  _DVLBeam.py  _Event.py  _EventArray.py  _INS.py  _Int32Stamped.py  _NEDPose.py  _ThrusterState.py  __init__.py
catkin_ws/devel/lib/python3/dist-packages/stonefish_ros/srv/: _Respawn.py  _SonarSettings.py  _SonarSettings2.py  __init__.py
catkin_ws/devel/lib/stonefish_ros/: parsed_simulator  parsed_simulator_nogpu
catkin_ws/devel/share/common-lisp/ros/stonefish_ros/msg/: BeaconInfo.lisp  DVL.lisp  DVLBeam.lisp  Event.lisp  EventArray.lisp  INS.lisp  (+14 more)
catkin_ws/devel/share/girona_pilot/cmake/: girona_pilotConfig.cmake
catkin_ws/devel/share/roseus/ros/stonefish_ros/: manifest.l
catkin_ws/devel/share/stonefish_ros/cmake/: stonefish_ros-msg-paths.cmake  stonefish_rosConfig.cmake
catkin_ws/src/girona_pilot/: CMakeLists.txt  package.xml
catkin_ws/src/girona_pilot/src/: pilot_complete.cpp
(+34 files in other folders)
